--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -192,9 +192,10 @@ $L:     1170px;
 
 
 $large_desktop: 1500px;
+$small_desktop: 1300px;
 $large_tablet: 1024px;
-$large_mobile: 600px;
 $small_tablet: 768px;
+$large_mobile: 600px;
 $small_mobile: 440px;
 
 
