--- a/php/layout/menu/catalog.phtml
+++ b/php/layout/menu/catalog.phtml
@@ -18,10 +18,17 @@ if(!empty($variables['parents'])){
             
                 <?php if ($item['id']==$variables['pageId']||$item['id']==$variables['parents'][1]->id) { $active = '';  } ?>
 
-                    <li class="sidebar__nav-item" data-drop="item<?=$item['id']?>"><a class="sidebar__nav-link" href="<?=$item['link']?>">
+                    <li class="sidebar__nav-item">
+                    <?php if ($subList['lines']):?>
+                    <a class="sidebar__nav-link sidebar__nav-linkDrop" data-drop="<?=$item['id']?>" href="<?=$item['link']?>">
                     <svg viewBox="0 0 10 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1.19621 0.209796C0.9026 -0.00805849 0.485936 0.0161474 0.21967 0.282414C-0.0732233 0.575307 -0.0732233 1.05018 0.21967 1.34307L7.93934 9.06274L0.21967 16.7824L0.147052 16.8665C-0.0708026 17.1601 -0.0465966 17.5768 0.21967 17.8431C0.512563 18.136 0.987437 18.136 1.28033 17.8431L9.53033 9.59307L9.60295 9.50896C9.8208 9.21534 9.7966 8.79868 9.53033 8.53241L1.28033 0.282414L1.19621 0.209796Z"></path>
-                    </svg><?=$item['text']?></a></li>
+                    </svg><span><?=$item['text']?></span></a>
+                    <?php else:?>
+                    <a class="sidebar__nav-link" data-drop="<?=$item['id']?>" href="<?=$item['link']?>">
+                    <span><?=$item['text']?></span></a>
+                    <?php endif;?>
+                    </li>
 
             <?php } ?>
 
