--- a/src/assets/css/blocks/header.scss
+++ b/src/assets/css/blocks/header.scss
@@ -3,7 +3,7 @@
 	position: fixed;
 	top: 0px;
 	width: 100%;
-	z-index: 6;
+	z-index: 12;
 	
 	
 
@@ -42,6 +42,8 @@
 	}
 
 	&__logo {
+		position: relative;
+		z-index: 20;
 		max-width: 28rem;
 		width: 100%;
 		display: flex;
