--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -150,6 +150,20 @@ h5{
 	@media screen and (max-width:$large_tablet) {
 		width: 100%;
 	}
+	.content__overlay {
+		position: absolute;
+		z-index: 10;
+		width: 100%; 
+		height: 100%;
+		background-color: rgba(38, 38, 38, 0.9);
+		cursor: pointer;
+		&.hidden {
+			opacity: 0;
+		}
+		@media screen and (max-width: $small_desktop) {
+			display: none;
+		}
+	}
 }
 
 .wrap-section {
