--- a/php/catalog/category.phtml
+++ b/php/catalog/category.phtml
@@ -42,6 +42,7 @@ $this->setCommonVar('smart_filters', $this->getSmartFilters($variables));
                 <?php if (!$this->isRootCatalog($variables)): $sort = ['price'=>'По цене','name'=>'По имени','ord'=>'По умолчанию']; ?>
                 <span class="pool-filters__sort-title">Сортировать</span>
                 <div class="select">
+                <span class="pool-filters__sort-title">Сортировать</span>
                   <div class="select__value">
                     <svg class="select__down" width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M3.18046 9.67654C3.18046 9.8537 3.18046 10.7526 3.18046 10.7526C3.18046 10.7526 2.35824 10.1648 2.14087 10.001C1.90305 9.8218 1.402 9.9088 1.16418 10.088C0.862591 10.3152 0.862591 10.6837 1.16418 10.9109L2.92667 12.2389C3.93656 13.0631 3.93656 13.0631 4.94645 12.2389L6.70894 10.9109C7.01053 10.6837 7.01053 10.3152 6.70894 10.088C6.47112 9.9088 5.97007 9.8218 5.73225 10.001C5.51488 10.1648 4.69266 10.7526 4.69266 10.7526C4.69266 10.7526 4.69266 9.8537 4.69266 9.67654V1.47919C4.69266 1.16455 4.35414 0.909485 3.93656 0.909485C3.51897 0.909485 3.18046 1.16455 3.18046 1.47919V9.67654Z"></path>
