--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -294,6 +294,21 @@ if(!empty($variables['parents'])){
   </div>
 </div>
 
+<div class="popup-wrap" id="configurator_popup">
+  <div class="popup">
+    <div class="popup__close" onclick="close_popup('configurator_popup')">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="popup-form">
+      <h2 class="popup-form__title">Заказать звонок</h2>
+      <div class="popup-form__text"> 
+        Lorem
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="popup-wrap" id="oneclick_modal">
   <div class="popup">
     <div class="popup__close" onclick="close_popup('oneclick_modal')">
