--- a/php/content/pools/configurator/option_window.phtml
+++ b/php/content/pools/configurator/option_window.phtml
@@ -1,4 +1,8 @@
-<div class="configurator__option-window centered toggling_module">
+<?php
+$id = $variables[0];
+$group = $variables[1];
+?>
+<div class="configurator__option-window centered toggling_module" data-window_id="<?=$id?>">
     <div class="info_icon-container">
         <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
             <circle cx="9.29319" cy="9.29319" r="8.79319" fill="white" />
@@ -6,9 +10,9 @@
         </svg>
     </div>
     <div class="window_info">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+        <p><?=$group['hint']?></p>
     </div>
-    <img src="dist/assets/images/configurator/equipment_main.png" alt="">
-    <div><span>Закладные элементы</span></div>
-    <div class="change_icon" onclick="show_popup('configurator_popup')"><img src="dist/assets/images/configurator/icons/change.svg" style="width: 289px;max-width: 289px;height: 100%;" alt=""></div>
+    <img src="<?=$group['icon']?>" alt="">
+    <div><span><?=$group['name']?></span></div>
+    <div class="change_icon"><img src="dist/assets/images/configurator/icons/change.svg" style="width: 289px;max-width: 289px;height: 100%;" alt=""></div>
 </div>
