--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -301,10 +301,13 @@ if(!empty($variables['parents'])){
       <div></div>
     </div>
     <div class="popup-form">
-      <h2 class="popup-form__title">Заказать звонок</h2>
-      <div class="popup-form__text"> 
-        Lorem
+      <h2 class="popup-form__title">Выбрать вариант</h2>
+      <div class="configurator__equipment-grid">
+         <div class="popup-form__item">1</div>
+         <div class="popup-form__item">2</div>
+         <div class="popup-form__item">3</div>
       </div>
+        <input type="hidden" name="window_id" value="">
     </div>
   </div>
 </div>
