--- a/php/content/pools/configurator/index.phtml
+++ b/php/content/pools/configurator/index.phtml
@@ -68,7 +68,7 @@ foreach($sections as $section){
                         </svg>
                     </div>
                     <div class="window_info">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+                        <p>Базовый вариант исполнения.</p>
                     </div>
                     <div><span>Liner</span></div>
                     <div><span>0 ₽</span></div>
@@ -81,7 +81,7 @@ foreach($sections as $section){
                         </svg>
                     </div>
                     <div class="window_info">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+                        <p>Вариант исполнения с тремя дополнительными защитными слоями (слой прозрачной смолы, декоративны наполнитель, керамика).</p>
                     </div>
                     <div><span>Cristal</span></div>
                     <div><span>+140 000 ₽</span></div>
@@ -90,7 +90,7 @@ foreach($sections as $section){
             <div class="configurator__option equipment_list" data-section="121198">
                 <h6 class="configurator__option-header">Опции</h6>
                 <div class="configurator__option-grid">
-                    <div class="configurator__option-window">
+                    <!-- <div class="configurator__option-window">
                         <div class="info_icon-container">
                             <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="9.29319" cy="9.29319" r="8.79319" fill="white" />
@@ -98,12 +98,12 @@ foreach($sections as $section){
                             </svg>
                         </div>
                         <div class="window_info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+                            <p>Опция HARD-RIB - силовой̆ каркас, интегрированный̆ в чашу бассейна для придания достаточной̆ прочности и удержания воды без внешней̆ обсыпки периметра бассейна.</p>
                         </div>
                         <img src="dist/assets/images/configurator/option_1.png" alt="">
                         <div><span>Система самоочистки</span></div>
                         <div><span>+140 000 ₽</span></div>
-                    </div>
+                    </div> -->
                     <div class="configurator__option-window">
                         <div class="info_icon-container">
                             <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
@@ -112,7 +112,7 @@ foreach($sections as $section){
                             </svg>
                         </div>
                         <div class="window_info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+                            <p>Опция HARD-RIB - силовой̆ каркас, интегрированный̆ в чашу бассейна для придания достаточной̆ прочности и удержания воды без внешней̆ обсыпки периметра бассейна.</p>
                         </div>
                         <img src="dist/assets/images/configurator/option_2.png" alt="">
                         <div><span>Самонесущая конструкция</span></div>
@@ -125,7 +125,7 @@ foreach($sections as $section){
                             </svg>
                         </div>
                         <div class="window_info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+                            <p>Декоративное обрамления чаши бассейна камнем, защищающим также от брызг и выплескивания воды.</p>
                         </div>
                         <img src="dist/assets/images/configurator/option_3.png" alt="">
                         <div><span>Бордюрный камень</span></div>
@@ -138,7 +138,7 @@ foreach($sections as $section){
                             </svg>
                         </div>
                         <div class="window_info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat deserunt alias repellat maiores.</p>
+                            <p>Слой полиуретановой пены 3 или 5 см, служит для дополнительного утепления чаши.</p>
                         </div>
                         <img src="dist/assets/images/configurator/option_4.png" alt="">
                         <div><span>Утепление чаши</span></div>
