--- a/php/layout/head.phtml
+++ b/php/layout/head.phtml
@@ -27,3 +27,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-K9NZCTN');</script>
 <!-- End Google Tag Manager -->
+
+<meta name="google-site-verification" content="ybBO275fA92_t_cLKj41ENu7nT8BWxwp5b2VnknKVI8" />
