--- a/src/assets/css/blocks/footer.scss
+++ b/src/assets/css/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    font-family: "Circe";
+    font-family: "Montserrat";
     padding: 1.75rem 0;
     @media screen and (max-width:$large_tablet) {
         padding: 2.2rem 0;
