--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -130,7 +130,7 @@
       }
     }
     .order_item .order_sum span {
-      font-family: 'Circe',sans-serif;
+      font-family: 'Montserrat',sans-serif;
       font-size: 20px;
     }
   
@@ -462,7 +462,7 @@
       }
   
       &_type_radio~.checkmark {
-        background-image: url(/templates/tb_2020/dist/assets/images/radio_off.svg);
+        background-image: url('~img/radio_off.svg');
         background-position: center;
         background-size: contain;
         display: inline-block;
@@ -480,7 +480,7 @@
       }
   
       &_type_radio:checked~.checkmark {
-        background-image: url(/templates/tb_2020/dist/assets/images/radio_on.svg);
+        background-image: url('~img/radio_on.svg');
       }
   
       &_type_text {
