--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -22,6 +22,7 @@ input[type=number]::-webkit-outer-spin-button {
 input {
 	-webkit-border-radius: 0px;
 	-webkit-appearance: none;
+	border-radius: 0px;
 }
 
 
