--- a/php/content/pools/configurator/index.phtml
+++ b/php/content/pools/configurator/index.phtml
@@ -3,6 +3,11 @@ $p = $variables['page'];
 $pic = $p->getValue('header_pic');
 $header = $this->escape($variables['header']);
 
+$models = [];
+$modelsArr = $this->vsk_objByType(267);
+foreach($modelsArr as $item){
+    $models[$item->getValue('group')][] = $item;
+}
 $params = $this->vsk_objByType(265,false,9999);
 $groups = $this->vsk_objByType(263);
 $sections = $this->vsk_objByType(262);
@@ -385,188 +390,10 @@ foreach($sections as $section){
     </div>
     <div class="configurator__pools configurator__pools--active">
         <h6 class="configurator__option-header">Выберите модель <span style="color: red">*</span></h6>
-        <h3>Royal</h3>
-        <div class="configurator__pools-grid">
-            <div class="configurator__option-window toggle_pool" data-id="royal_12037">
-                <span class="series__modelName">ROYAL 12037</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/royal_12037/left/R12037.svg">
-                <span class="series__modelPrice">780 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина, м — <span>12 м</span></p>
-                    <p class="product__specifications-item">Ширина, м — <span>3.7 м</span></p>
-                    <p class="product__specifications-item">Глубина, м — <span>1.4 - 1.9 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="royal_10037">
-                <span class="series__modelName">ROYAL 10037</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/royal_1037/left/R10037.svg">
-                <span class="series__modelPrice">670 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>10 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3.7 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.4 - 1.75 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="royal_9037">
-                <span class="series__modelName">ROYAL 9037</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/royal_9037/left/R9037.svg">
-                <span class="series__modelPrice">610 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>9 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3.7 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.4 - 1.7 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="royal_8037">
-                <span class="series__modelName">ROYAL 8037</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/royal_8037/left/R8037.svg">
-                <span class="series__modelPrice">560 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>8 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3.7 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.4 - 1.65 м</span></p>
-                </div>
-            </div>
-        </div>
-        <h3>Supreme</h3>
-        <div class="configurator__pools-grid">
-            <div class="configurator__option-window toggle_pool" data-id="supreme_7530">
-                <span class="series__modelName">SUPREME 7530</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/supe_7530/left/S7530.svg">
-                <span class="series__modelPrice">470 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина, м — <span>7.5 м</span></p>
-                    <p class="product__specifications-item">Ширина, м — <span>3 м</span></p>
-                    <p class="product__specifications-item">Глубина, м — <span>1.7 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="supreme_6530">
-                <span class="series__modelName">SUPREME 6530</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/supreme_6530/left/S6530.svg">
-                <span class="series__modelPrice">410 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>6.5 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.7 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="supreme_5530">
-                <span class="series__modelName">SUPREME 5530</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/supreme_5530/left/S5530.svg">
-                <span class="series__modelPrice">350 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>5.5 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.7 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="supreme_4530">
-                <span class="series__modelName">SUPREME 4530</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/supreme_4530/left/S4530.svg">
-                <span class="series__modelPrice">290 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>4.5 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.7 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="supreme_mini">
-                <span class="series__modelName">SUPREME MINI</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/supreme_mini/left/S_mini.svg">
-                <span class="series__modelPrice">260 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>4 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>2.5 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.7 м</span></p>
-                </div>
-            </div>
-        </div>
-        <h3>Hugo</h3>
-        <div class="configurator__pools-grid_modified">
-            <div class="configurator__option-window toggle_pool" data-id="hugo_8237">
-                <span class="series__modelName">HUGO 8237</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/hugo_8237/left/H8237.svg">
-                <span class="series__modelPrice">550 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина, м — <span>8.2 м</span></p>
-                    <p class="product__specifications-item">Ширина, м — <span>3.7 м</span></p>
-                    <p class="product__specifications-item">Глубина, м — <span>1.5 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="hugo_6232">
-                <span class="series__modelName">HUGO 6232</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/hugo_6232/left/H6232.svg">
-                <span class="series__modelPrice">400 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>6.2 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>3.2 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.5 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="hugo_5227">
-                <span class="series__modelName">HUGO 5227</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/hugo_5227/left/H5227.svg">
-                <span class="series__modelPrice">330 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>5.2 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>2.7 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.5 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="hugo_4222">
-                <span class="series__modelName">HUGO 4222</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/hugo_4222/left/H4222.svg">
-                <span class="series__modelPrice">240 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>4.2 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>2.2 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.5 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="hugo_3222">
-                <span class="series__modelName">HUGO 3222</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/hugo_3222/left/H3222.svg">
-                <span class="series__modelPrice">200 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>3.2 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>2.2 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.5 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="hugo_2222">
-                <span class="series__modelName">HUGO 2222</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/hugo_2222/left/H2222.svg">
-                <span class="series__modelPrice">150 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>2.2 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>2.2 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.5 м</span></p>
-                </div>
-            </div>
-        </div>
-        <h3>Art</h3>
-        <div class="configurator__pools-grid">
-            <div class="configurator__option-window toggle_pool" data-id="art_6530">
-                <span class="series__modelName">ART 6530</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/art_6530/left/A6530.svg">
-                <span class="series__modelPrice">350 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина, м — <span>6.5 м</span></p>
-                    <p class="product__specifications-item">Ширина, м — <span>3 м</span></p>
-                    <p class="product__specifications-item">Глубина, м — <span>1.5 м</span></p>
-                </div>
-            </div>
-            <div class="configurator__option-window toggle_pool" data-id="art_4025">
-                <span class="series__modelName">ART 4025</span>
-                <img class="series__modelImage" src="/images/catalog/abpool/art_4025/left/A4025.svg">
-                <span class="series__modelPrice">190 000 ₽</span>
-                <div class="product__specifications">
-                    <p class="product__specifications-item">Длина — <span>4 м</span></p>
-                    <p class="product__specifications-item">Ширина — <span>2.5 м</span></p>
-                    <p class="product__specifications-item">Глубина — <span>1.3 м</span></p>
-                </div>
-            </div>
-        </div>
+        <?php foreach($models as $category): ?>
+            <?= $this->render($category, 'content/pools/configurator/series_row') ?>
+        <?php endforeach; ?>
+        
     </div>
 </div>
 <div class="configurator__estimate">
