--- a/php/content/pools/configurator/option_window2.phtml
+++ b/php/content/pools/configurator/option_window2.phtml
@@ -2,7 +2,7 @@
 $id = $variables[0];
 $group = $variables[1];
 ?>
-<div class="configurator__option-window centered toggling_module" data-window_id="<?=$id?>">
+<div class="configurator__option-window" data-window_id="<?=$id?>">
     <div class="info_icon-container">
         <svg class="info_icon" width="19" height="19" viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg">
             <circle cx="9.29319" cy="9.29319" r="8.79319" fill="white" />
@@ -14,5 +14,5 @@ $group = $variables[1];
     </div>
     <img src="<?=$group['icon']?>" alt="">
     <div><span><?=$group['name']?></span></div>
-    <div class="change_icon"><img src="dist/assets/images/configurator/icons/change.svg" style="width: 289px;max-width: 289px;height: 100%;" alt=""></div>
+    <div class="window_icon"><img src="dist/assets/images/configurator/icons/show.svg" style="width: 289px;max-width: 289px;height: 100%;" alt=""></div>
 </div>
